# pastpuzzle-rss

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  feed.xml  pyproject.toml
.github/workflows/: update-feed.yml
data/: archive.json
docs/: feed.xml
src/: archive.py  generate_feed.py  get_token.py  main.py  scrape.py
tests/: test_archive.py  test_parser.py
tests/fixtures/: pastpuzzle.html  pastpuzzle.json  pastpuzzle_quiz.json  pastpuzzle_supabase.json  pastpuzzle_video.json  podcast_page.html  podcast_page_download.html  wdr_zeitzeichen.html
